--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "just-for-fun",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "main": "dist/fun-vue.cjs",
   "module": "dist/fun-vue.esm.js",
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.12.1",
+    "eslint": "^8.57.0",
     "typescript": "^5.4.3",
     "vite": "^5.2.7",
     "vitest": "^1.4.0"
