--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,14 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "moduleResolution": "Node",
+    "paths": {
+      "@zy/*": ["./packages/*/src"]
+    },
+    "types": ["vitest/globals"],
     "resolveJsonModule": true,
+    "noImplicitAny": false,
+    "removeComments": true,
+    "preserveConstEnums": true,
     "strict": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
@@ -16,5 +23,5 @@
     "isolatedModules": true,
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["./packages/*/src", "./packages/*/__tests__"]
 }
