--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "testu": "vitest -u"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.12.1",
